# DS-MeZO

./: .gitignore  =1.14  AUDIT.md  CLAUDE.md  DS_MeZO_Combined.md  DS_MeZO_Engineering_Context.md  DS_MeZO_Master.md  DS_MeZO_Parameter_Audit.md  DS_MeZO_Theory_Context.md  README.md  objectives.md  pyproject.toml  research_synthesis.md
.audit/: additional_papers.md  algorithm_audit.md  comprehensive_audit.md  eval_audit.md  paper_summaries.md  resource_analysis.md
conf/: grpo.yaml  pissa.yaml  train.yaml
configs/: smoke.yaml
ds_mezo/: __init__.py  adapter_io.py  backend.py  config.py  controller.py  kernels.py  model_config.py
eval/: __init__.py  ablations.py  analysis_results.md  benchmarks.py  data.py  debug_hooks.py  gradient_alignment.py  grpo_baseline.py  results.json  rewards.py  rl_bench_eval.py  rl_bench_results.json  run.py  sft_eval.py  sft_results.json  utils.py
prompts/: test.jsonl
resources/dora/: paper.md
resources/ds_mezo/: paper.md
resources/pissa/: paper.md
resources/polar_express/: polar_express.md
resources/sparse_mezo/: paper.md
resources/unso/: unso.md
scripts/: launch.sh  prepare_pissa.py  train.py
tests/: test_evaluation.py  test_kernels.py
