[project]
name = "ds-mezo"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "torch==2.10.0",
    "triton==3.6.0",
    "vllm==0.17.1",
    "safetensors==0.7.0",
    "transformers==4.56.0",
    "peft==0.15.0",
    "datasets==3.5.0",
    "evaluate==0.4.3",
    "hydra-core>=1.3.0",
    "scipy==1.15.0",
    "numpy==2.2.0",
    "optht==0.2.0",
    "trl==0.16.0",
    "accelerate==1.5.0",
]

[project.scripts]
ds-mezo-train = "scripts.train:main"
ds-mezo-pissa = "scripts.prepare_pissa:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ds_mezo", "scripts", "eval", "conf"]
